--- a/app/views/regions/index.html.erb
+++ b/app/views/regions/index.html.erb
@@ -1,5 +1,7 @@
-<ul>
+<div style="display: flex; justify-content: space-around;">
   <% @regions.each do |region| %>
-    <li><%= restaurant.name %></li>
+    <div style="width: 500px; height: 500px; border: 2px solid red; margin-top: 10px; background-image: url('<%= region.image %>');">
+      <h1><%= region.name %></h1>
+    </div>
   <% end %>
-</ul>
+</div>
