--- a/app/views/regions/index.html.erb
+++ b/app/views/regions/index.html.erb
@@ -1,7 +1,7 @@
 <div style="display: grid; grid-template-columns: 1fr 1fr 1fr; margin-top: 10px;">
   <% @regions.each do |region| %>
     <div style="background-image: url('<%= region.image %>'); font-family: 'ZCOOL XiaoWei', sans-serif; display: flex; color: rgb(149,0,255); font-weight: 400; align-items: center; justify-content: center; padding: 100px; background-size: cover; background-position: center; border-radius: 5px; height: 300px; font-size: 40px; text-shadow: 2px 2px 4px whitesmoke; box-shadow: 0 0 7px rgb(1,1,1); margin: 10px 10px">
-      <h1><%= region.name %></h1>
+      <h1><%= link_to region.name, region_path(region) %></h1>
     </div>
   <% end %>
 </div>
