--- a/app/views/regions/show.html.erb
+++ b/app/views/regions/show.html.erb
@@ -1,14 +1,3 @@
 <div class="container text-center">
-  <h2><%= @region.name %></h2>
-  <div style="background: white; box-shadow: 0 0 10px rgb(1,1,1); border-radius: 5px; overflow: hidden; position: relative;">
-  <img src="https://img5.goodfon.ru/original/640x480/0/33/abstraktsiia-windows-chast-sveta-aziia.jpg" style="width: 100%; height: 400px; object-fit: cover;">
-    <div style="display: flex; align-items: flex-end; justify-content: space-between; padding: 16px">
-      <div>
-        <h2 style="font-size: 24px; font-weight: 700; margin: 0; text-align: start">country_name, city_name</h2>
-        <p style="font-size: 14px; font-weight: 300; margin: 0; text-align: start">sight_name</p>
-      </div>
-      <h2 style="font-size: 24px; font-weight: 700; margin: 0; text-align: end">date</h2>
-      <img src="" style="width: 80px; height: 80px; border-radius: 150px; object-fit: cover; object-position: top; position: absolute; right: 16px; top: 350px; box-shadow: 0 0 3px rgb(1,1,1);">
-    </div>
-  </div>
+  <h2 style="margin-top: 10px;">Check out the countries and cities we've visited in <%= @region.name %></h2>
 </div>
