--- a/app/views/regions/show.html.erb
+++ b/app/views/regions/show.html.erb
@@ -1,3 +1,6 @@
 <div class="container text-center">
   <h2 style="margin-top: 10px;">Check out the countries and cities we've visited in <%= @region.name %></h2>
+  <div>
+    <a href="/regions" class="btn btn-dark">Back</a>
+  </div>
 </div>
