--- a/app/views/regions/show.html.erb
+++ b/app/views/regions/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container text-center">
-  <h2 style="margin-top: 10px;">Check out the countries and cities we've visited in <%= @region.name %></h2>
+  <h2 style="margin-top: 10px;">Check out the places we've visited in <%= @region.name %></h2>
   <div>
     <a href="/regions" class="btn btn-dark">Back</a>
   </div>
