--- a/app/views/regions/show.html.erb
+++ b/app/views/regions/show.html.erb
@@ -1,5 +1,12 @@
 <div class="container text-center">
   <h2 style="margin-top: 10px;">Check out the places we've visited in <%= @region.name %></h2>
+  <div style="display: flex; align-items: center; background: white; box-shadow: 0 0 5px rgb(1,1,1); margin-bottom: 10px;">
+  <img src="" style="height: 190px; margin-right: 20px;">
+    <div style="padding: 16px;">
+      <h2 style="font-size: 28px; font-weight: 700; margin: 0;">Country name</h2>
+      <p style="font-size: 16px; font-weight: 300; margin-top: 0; margin-top: 4px;">Cities</p>
+    </div>
+  </div>
   <div>
     <a href="/regions" class="btn btn-dark">Back</a>
   </div>
