--- a/app/views/countries/new.html.erb
+++ b/app/views/countries/new.html.erb
@@ -1,10 +1,7 @@
-<%= simple_form_for [@region, @country] do |f| %>
-  <%= f.association :region %>
+<%= form_with model: @country do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
   <%= f.label :flag %>
   <%= f.text_field :flag %>
   <%= f.submit %>
-  <%= f.button :submit, 'Do it!', class: "btn btn-secondary"%>
-  <a href="/regions" class="btn btn-dark">Back</a>
 <% end %>
