--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   <body style="background-color: whitesmoke;">
     <nav class="navbar bg-body-tertiary" style="box-shadow: 0 0 5px rgb(1,1,1); background-color: whitesmoke">
       <form class="container-fluid justify-content-start">
-        <button class="btn btn-outline-success me-2" type="button">Main button</button>
+        <a href="/countries/new" class="btn btn-outline-success">New</a>
       </form>
     </nav>
     <%= yield %>
