--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,9 @@
   </head>
 
   <body style="background-color: whitesmoke;">
-    <nav class="navbar bg-body-tertiary" style="box-shadow: 0 0 5px rgb(1,1,1); background-color: whitesmoke">
+    <nav class="navbar" style="box-shadow: 0 0 5px rgb(1,1,1); background-color: rgb(221,230,237);">
       <form class="container-fluid justify-content-start">
-        <a href="/countries/new" class="btn btn-outline-success">New</a>
+        <a href="/countries/new" class="btn" style="background-color: transparent; border: 1px solid rgb(39, 55, 77); border-radius: 5px;">Add country</a>
       </form>
     </nav>
     <%= yield %>
