--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,9 @@
         <a href="/countries/new" class="btn" style="background-color: transparent; border: 1px solid rgb(39, 55, 77); border-radius: 5px;">Add country</a>
       </form>
     </nav>
-    <%= yield %>
+    <div style="padding: 15px 15px;">
+      <h1>hi there!</h1>
+      <%= yield %>
+    </div>
   </body>
 </html>
