--- a/app/views/countries/new.html.erb
+++ b/app/views/countries/new.html.erb
@@ -1,9 +1,22 @@
-<div style="display: d-block; justify-content: center;">
-  <%= form_with model: @country do |f| %>
-    <label style="color: rgb(39,55,77); font-weight: 700; font-size: 24px; font-family: 'ZCOOL XiaoWei';">Country</label>
-    <%= f.text_field :name %>
-    <label style="color: rgb(39,55,77); font-weight: 700; font-size: 24px; font-family: 'ZCOOL XiaoWei';">Flag</label>
-    <%= f.text_field :flag %>
-    <%= f.submit %>
-  <% end %>
+<h1 style="text-align: center; margin-top: 120px; font-weight: 700; font-size: 40px; font-family: 'ZCOOL XiaoWei';">We've just visited</h1>
+<div style="display: flex; justify-content: center; margin-top: 30px;">
+  <div style="display: flex; justify-content: center; background-color: rgb(221, 230, 237); border: 1px solid rgb(39, 55, 77); border-radius: 5px; box-shadow: 0 0 5px rgb(39,55,77); width: 600px; height: 300px; padding: 30px  30px;">
+    <%= form_with model: @country do |f| %>
+      <div>
+        <label style="color: rgb(39,55,77); font-weight: 600; font-size: 24px; font-family: 'ZCOOL XiaoWei';">Country</label>
+      </div>
+      <div>
+        <%= f.text_field :name, class: "form-control", placeholder: "We went to..."%>
+      </div>
+      <div style="margin-top: 10px;">
+        <label style="color: rgb(39,55,77); font-weight: 600; font-size: 24px; font-family: 'ZCOOL XiaoWei';">Flag</label>
+      </div>
+      <div>
+        <%= f.text_field :flag, class: "form-control", placeholder: "Paste a link..." %>
+      </div>
+      <div style="margin-top: 15px;">
+        <%= f.submit class: "btn btn-lg", style: "font-weight: 400; font-size: 20px; font-family: 'ZCOOL XiaoWei'; color: white; background-color: rgb(39, 55, 77); border: 1px solid rgb(39, 55, 77); border-radius: 5px;" %>
+      </div>
+    <% end %>
+  </div>
 </div>
