--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,13 +15,13 @@
   </head>
 
   <body style="background-color: whitesmoke;">
-    <nav class="navbar" style="box-shadow: 0 0 5px rgb(1,1,1); background-color: rgb(221,230,237);">
-      <form class="container-fluid justify-content-start">
-        <a href="/countries/new" class="btn" style="background-color: transparent; border: 1px solid rgb(39, 55, 77); border-radius: 5px;">Add country</a>
+    <nav class="navbar" style="box-shadow: 0 0 5px rgb(39,55,77); border-bottom: 1px solid rgb(39, 55, 77); background-color: rgb(221, 230, 237);">
+      <form class="container-fluid justify-content-between">
+        <a href="/countries/new" class="btn" style="font-weight: 400; font-size: 16px; font-family: 'ZCOOL XiaoWei'; background-color: transparent; border: 1px solid rgb(39, 55, 77); border-radius: 5px;">Add country</a>
+        <a href="/regions" class="btn" style="font-weight: 400; font-size: 16px; font-family: 'ZCOOL XiaoWei'; background-color: transparent; border: 1px solid rgb(39, 55, 77); border-radius: 5px;">Home</a>
       </form>
     </nav>
-    <div style="padding: 15px 15px;">
-      <h1>hi there!</h1>
+    <div style="padding: 10px 10px;">
       <%= yield %>
     </div>
   </body>
