--- a/app/views/countries/new.html.erb
+++ b/app/views/countries/new.html.erb
@@ -2,14 +2,24 @@
 <div style="display: flex; justify-content: center; margin-top: 30px;">
   <div style="display: flex; justify-content: center; background-color: rgb(221, 230, 237); border: 1px solid rgb(39, 55, 77); border-radius: 5px; box-shadow: 0 0 5px rgb(39,55,77); width: 600px; height: 300px; padding: 30px  30px;">
     <%= form_with model: @country do |f| %>
+      <% if @country.errors.any? %>
+        <div role="alert">
+          Could not create a country due to the following issues:
+          <ul>
+            <% @country.errors.each do |error| %>
+              <li><%= error.full_message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
       <div>
-        <label style="color: rgb(39,55,77); font-weight: 600; font-size: 24px; font-family: 'ZCOOL XiaoWei';">Country</label>
+        <label style="color: rgb(39,55,77); font-weight: 600; font-size: 24px; font-family: 'ZCOOL XiaoWei';">Country <i class="fa-solid fa-globe" style="color: #27374d;"></i></label>
       </div>
       <div>
         <%= f.text_field :name, class: "form-control", placeholder: "We went to..."%>
       </div>
       <div style="margin-top: 10px;">
-        <label style="color: rgb(39,55,77); font-weight: 600; font-size: 24px; font-family: 'ZCOOL XiaoWei';">Flag</label>
+        <label style="color: rgb(39,55,77); font-weight: 600; font-size: 24px; font-family: 'ZCOOL XiaoWei';">Flag <i class="fa-regular fa-flag" style="color: #27374d;"></i></label>
       </div>
       <div>
         <%= f.text_field :flag, class: "form-control", placeholder: "Paste a link..." %>
