--- a/app/views/countries/new.html.erb
+++ b/app/views/countries/new.html.erb
@@ -1,4 +1,4 @@
-<h1 style="text-align: center; margin-top: 120px; font-weight: 700; font-size: 40px; font-family: 'ZCOOL XiaoWei';">We've just visited</h1>
+<h1 style="color: rgb(39,55,77); text-align: center; margin-top: 120px; font-weight: 700; font-size: 36px; font-family: 'ZCOOL XiaoWei';">We've just visited...</h1>
 <div style="display: flex; justify-content: center; margin-top: 30px;">
   <div style="display: flex; justify-content: center; background-color: rgb(221, 230, 237); border: 1px solid rgb(39, 55, 77); border-radius: 5px; box-shadow: 0 0 5px rgb(39,55,77); width: 600px; height: 300px; padding: 30px  30px;">
     <%= form_with model: @country do |f| %>
