--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
     <nav class="navbar" style="box-shadow: 0 0 5px rgb(39,55,77); border-bottom: 1px solid rgb(39, 55, 77); background-color: rgb(221, 230, 237);">
       <form class="container-fluid justify-content-between">
         <a href="/countries/new" class="btn" style="font-weight: 400; font-size: 16px; font-family: 'ZCOOL XiaoWei'; background-color: transparent; border: 1px solid rgb(39, 55, 77); border-radius: 5px;">Add country</a>
+        <h2 style="color: rgb(39,55,77); font-weight: 700; font-size: 32px; font-family: 'ZCOOL XiaoWei';">Kopeika's Travel Diary</h2>
         <a href="/regions" class="btn" style="font-weight: 400; font-size: 16px; font-family: 'ZCOOL XiaoWei'; background-color: transparent; border: 1px solid rgb(39, 55, 77); border-radius: 5px;">Home</a>
       </form>
     </nav>
