--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,7 +1,7 @@
-<h1 style="color: rgb(39,55,77); text-align: center; margin-top: 120px; font-weight: 700; font-size: 36px; font-family: 'ZCOOL XiaoWei';">We are about to create a beautiful trip card!</h1>
+<h1 style="color: rgb(39,55,77); text-align: center; margin-top: 20px; font-weight: 700; font-size: 36px; font-family: 'ZCOOL XiaoWei';">We are about to create a beautiful trip card!</h1>
 <div style="display: flex; justify-content: center; margin-top: 30px;">
-  <div style="display: flex; justify-content: center; background-color: rgb(221, 230, 237); border: 1px solid rgb(39, 55, 77); border-radius: 5px; box-shadow: 0 0 5px rgb(39,55,77); width: 700px; height: 400px; padding: 30px  30px;">
-    <%= simple_format [@region, @trip] do |f| %>
+  <div style="display: flex; justify-content: center; background-color: rgb(221, 230, 237); border: 1px solid rgb(39, 55, 77); border-radius: 5px; box-shadow: 0 0 5px rgb(39,55,77); width: 700px; height: 600px; padding: 30px  30px;">
+    <%= simple_form_for [@region, @trip] do |f| %>
       <% if @trip.errors.any? %>
         <div role="alert">
           Could not create a card due to the following issues:
@@ -12,7 +12,7 @@
           </ul>
         </div>
       <% end %>
-      <div style="margin-top: 50px;">
+      <div>
         <label style="color: rgb(39,55,77); font-weight: 600; font-size: 24px; font-family: 'ZCOOL XiaoWei';">Title</label>
       </div>
       <div>
