--- a/app/views/regions/show.html.erb
+++ b/app/views/regions/show.html.erb
@@ -1,4 +1,21 @@
 <div class="container text-center">
   <h2 style="color: rgb(39,55,77); font-weight: 700; font-size: 32px; font-family: 'ZCOOL XiaoWei'; margin-top: 10px;"><%= @region.name %></h2>
+</div>
+<% @region.trips.each do |trip| %>
+<div style="background: white; box-shadow: 0 0 10px rgb(1,1,1); border-radius: 5px; overflow: hidden; position: relative;">
+  <img src="<%= trip.photo %>" style="width: 100%; height: 400px; object-fit: cover;">
+  <div style="display: flex; align-items: flex-end; justify-content: space-between; padding: 16px">
+    <div>
+
+        <h2 style="font-size: 24px; font-weight: 700; margin: 0; text-align: start"><%= trip.country.name %></h2>
+        <p style="font-size: 14px; font-weight: 300; margin: 0; text-align: start"><%= trip.place %></p>
+
+    </div>
+    <h2 style="font-size: 24px; font-weight: 700; margin: 0; text-align: end"> <%= trip.date %></h2>
+    <img src="<%= trip.country.flag %>" style="width: 80px; height: 80px; border-radius: 150px; object-fit: cover; object-position: top; position: absolute; right: 16px; top: 350px; box-shadow: 0 0 3px rgb(1,1,1);">
+    <% end %>
+  </div>
+</div>
+<div>
   <%= link_to "Add card", region_trips_new_path(@region), class: "btn btn-secondary" %>
 </div>
